[package]
name = "otel_posix_pseudo_propegator"
version = "0.1.0"
edition = "2024"

[lib] 
crate-type = ["cdylib"]

[dependencies]
# Low-level C bindings for pthread types
libc = "0.2"

# OpenTelemetry API for Context capture/attachment
opentelemetry = { version = "0.30" }

[dev-dependencies]
# OpenTelemetry SDK for testing
opentelemetry_sdk = { version = "0.30", features = ["trace"] }
assert_cmd = "2.0"
predicates = "3.0"
